Page boutique, fix: cart z-index

--- a/themes/amo_theme/src/css/ecommerce/page-boutique.styl
+++ b/themes/amo_theme/src/css/ecommerce/page-boutique.styl
@@ -15,7 +15,7 @@
     position absolute
     text-align center
     top 0
-    z-index 9
+    z-index 999
     border solid 1px #fff
     .cart-summary-left
       a
